# federal-workforce-predictor

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GITHUB_PAGES_SETUP.md  README.md  RELEASE_NOTES_DRAFT.md  SECURITY.md  docker-compose.yml  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  compliance_question.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 17dcf323081b_add_employee_assessments_and_career_.py  3ef7227340f4_initial_schema.py
app/: __init__.py  main.py
app/api/graphql/: schema.py  types.py
app/core/: config.py  deps.py  ethics.py  security.py
app/db/: __init__.py  engine.py  models.py  repositories.py
app/services/: agent.py  mcp_server.py  recommender.py
app/static/: explorer.html
docker/: README.md  keycloak-realm.json
docs/: _config.yml  architecture.md  configuration.md  getting-started.md  index.md  productionizing.md  use-cases.md
docs/ADRs/: ADR-001-flat-graphql-schema.md  ADR-002-synthetic-social-data-only.md  ADR-003-principal-to-mcp.md  ADR-004-ethics-decision-logging.md  ADR-005-offline-first-auth.md
docs/compliance/: .gitkeep  il-deployment-guidance.md  nist-ai-rmf-crosswalk.md
docs/concepts/: ethics-and-consent.md  limited-graphql.md  mcp-integration.md  principal-model.md  synthetic-data.md
docs/deployment/: auth-providers.md  docker.md  production.md
docs/development/: commit-conventions.md
docs/extending/: adding-a-recommendation-path.md  new-mcp-tool.md  swapping-the-agent.md
docs/threat-models/: .gitkeep  STRIDE-AI-initial.md
docs/usage/: auth.md  graphql.md  mcp.md  scripts.md
scripts/: get_demo_token.py  seed_demo_data.py  verify.py
tests/: conftest.py  test_graphql.py  test_mcp.py  test_repositories.py  test_security_ethics.py
